# zkmips-zkvm-impl-in-rust-

./: .gitignore  Cargo.toml  README.md
benches/: vm_benchmarks.rs
src/: circuit.rs  lib.rs  main.rs  proof.rs  vm.rs
src/crypto/: mod.rs
src/debug/: mod.rs
src/memory/: gc.rs  mod.rs  page_table.rs  permissions.rs  segment.rs
src/network/: consensus.rs  message.rs  mod.rs  peer.rs  sync.rs
src/state/: mod.rs  trie.rs
tests/: integration_tests.rs  proof_tests.rs  vm_tests.rs
