[package]
name = "zkvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
sha3 = "0.10"
rand = "0.8"
ff = "0.13"
bellman = "0.14"
pairing = "0.23"
blake2 = "0.10"
thiserror = "1.0"
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"

[[bench]]
name = "vm_benchmarks"
harness = false
