[package]
name = "zkmips-zkvm"
version = "0.1.0"
edition = "2021"
authors = ["Idrees"]
description = "Experimental Zero-Knowledge Virtual Machine Implementation"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
rayon = "1.5"
dashmap = "5.4"
metrics = "0.21"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.3"
k256 = { version = "0.13", features = ["ecdsa"] }
patricia-trie = "0.4"
zksync-crypto = "1.0"
zksync-types = "1.0"